<resources>
    <string name="app_name">Doctor Doctor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_new_patient">Create New Patient</string>
    <string name="prescription">Prescription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_s_username">Patient\'s Username</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="select_patient">Select Patient</string>
    <string name="create_prescription">Create new Prescription</string>
    <string name="login">Login</string>
    <string name="submit">Submit Prescription</string>
    <string name="submitting_prescription">Submitting prescription...</string>

    <string name="role_doctor">DOCTOR</string>
    <string name="role_patient">PATIENT</string>
    <string name="role_pharmacy">PHARMA</string>
    <string name="logging_in">Logging in...</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="fetching_user">Fetching user...</string>

    <string name="prescription_update_notification_title_template">Prescription update: %1$s
    </string>

    <!-- TODO: remove this placeholder text -->
    <string name="prescription_update_notification_placeholder_text_template">You said %1$s and
        lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum,
        velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed
        turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem,
        ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet
        turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat
        nec nec tortor.
    </string>
    <string name="presc_submitted">Prescription submitted</string>
    <string name="unkown_role">Unknown role</string>
    <string name="retrieving_presc">Retreiving your prescriptions</string>

</resources>
