<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DoctorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patient_s_username"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="User 1"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:background="@android:color/transparent"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prescription"
                    android:gravity="top|left"
                    android:background="@null"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/submitPrescriptin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/submit"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:transitionName="transition_fab_src"
        android:id="@+id/select_user"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:src="@drawable/ic_person_add_white_48dp"
        app:layout_anchor="@id/divider"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
